Dockerizacao com  docker compose

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
-spring.data.mongodb.uri=mongodb://localhost/estacionamento
-spring.data.mongodb.port=
+#spring.data.mongodb.uri=mongodb://localhost/estacionamento
 spring.data.mongodb.username=
 spring.data.mongodb.password=
 
+spring.data.mongodb.host=mongodb
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=estacionamento
+#server.port = 3001
