--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#spring.data.mongodb.uri=mongodb://localhost/estacionamento
+spring.data.mongodb.uri=mongodb://localhost/estacionamento
 spring.data.mongodb.username=
 spring.data.mongodb.password=
 
